@startuml BCE_UpdateUserAccount
title Update User Account

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "manage_users.js" as B {
  +OpenEditModal(user)
  +loadData(filters)
}

class "UpdateUserAccountController" as C {
  +bool
  updateUserAccount(int account_id, dict input_data)
}

class "Account" as E {
  +bool
  update(int user_id, dict update_dict)
}

B -- C
C -- E

@enduml
